[metadata]
name = cruton
summary = Platform for fleet management for OpenStack.
description-file =
    README.md

author = Kevin.Carter@rackspace.com
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/cruton
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2.7

[files]
packages =
    cruton

[entry_points]
console_scripts =
    cruton-api-debug = cruton.main:debug
    cruton-manage = cruton.data_store.main:main

wsgi_scripts =
    cruton-api-wsgi = cruton.main:init_application

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
